--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -2,18 +2,16 @@
 # NW Program Page
 --------------------------------------------------------------*/
 // General Setting
-
-// * {
-// 	box-sizing: border-box;
-// }
-// @media screen and (max-width: 480px) {
-
+* {
+	box-sizing: border-box;
+}
 .nw-program-wrapper {
 	height: auto;
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 1.5;
 	align-items: center;
+	background-color: grey;
 }
 // fonts
 
@@ -28,7 +26,6 @@ h1 {
 	font-size: $h1_size_mob;
 	line-height: 2.625rem;
 }
-
 h2 {
 	font-size: $h2_size_mob;
 	line-height: 2.125rem;
@@ -44,13 +41,11 @@ p {
 	line-height: 2.5rem;
 	font-style: $font_body;
 }
-
 .spcil p {
 	font-size: 1.25rem;
 	line-height: 2.5rem;
 	font-style: $font_main;
 }
-
 .green-btn {
 	background-color: #4FC8A1;
 	color: $white;
@@ -64,10 +59,9 @@ p {
 .nw-program {
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
-
 	.why-nw {
 		p {
-			display:block;
+			display: block;
 			flex-shrink: 5;
 		}
 	}
@@ -81,30 +75,28 @@ p {
 		}
 	}
 }
-
 .nw-part1 {
 	@include desktop {
 		display: flex;
 		flex-direction: row;
-	};
+	}
 }
-// Funding Section
 
+// Funding Section
 .funding {
 	display: flex;
 	flex-direction: column;
 	margin-top: $basic_margin*3;
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
-
 	.funding-img,
 	.money-spend-img {
 		display: flex;
 		justify-content: center;
 		margin-top: 2rem;
-		@include desktop{
-			margin-top:0px;
-		};
+		@include desktop {
+			margin-top: 0;
+		}
 	}
 	.funding-img img {
 		@include desktop {
@@ -112,18 +104,21 @@ p {
 			width: 120%;
 		}
 	}
-
 	.money-spend-img img {
 		@include desktop {
-			padding-right:1.7rem;
-		};
+			padding-right: 4rem;
+			padding-left: .4rem;
+		}
+	}
+	h2{
+		text-align: center;
 	}
 	.nw-part2 {
 		@include desktop {
 			display: flex;
 			flex-direction: row;
 			align-items: center;
-			.red-border-container {
+		  .red-border-container {
 				width: 82%;
 				display: flex;
 			}
@@ -139,31 +134,29 @@ p {
 			flex-shrink: 5;
 		}
 	}
-
 	.funding-btn {
 		display: flex;
 		justify-content: center;
 		margin-top: $basic_margin*3;
-		@include desktop{
+		@include desktop {
 			justify-content: flex-end;
 		}
-
 		.green-btn {
 			padding: 10px;
 			width: 44.666%;
 			margin-right: 2px;
-			@include desktop{
+			@include desktop {
 				padding: 1.2rem;
 				width: 18%;
-			};
+			}
 		}
 	}
 }
+
 //School List Section
 .school-list {
 	display: flex;
 	flex-direction: column;
-
 	.school-img {
 		display: flex;
 		justify-content: center;
@@ -177,38 +170,49 @@ p {
 		}
 	}
 }
+
 //Preschools List Section
-
 .preschools-list {
-	padding: 1px;
-
-	.target {
-		margin: 0 auto;
+	border-bottom: solid 3px $color_btn_green;
+	h1{
+		width:78%;
+	}
+	@include desktop{
+		h1{
+		  width: 40%;
+			padding: 1.7rem;
+			border-top: solid 3px $color_btn_green;
+		}
 	}
 }
-//Enrollment Section
 
+//Enrollment Section
 .enroll {
 	display: flex;
 	flex-direction: column;
-.enrollment-wrap{
-	@include desktop{
-		display: flex;
-		flex-direction: row;
 
+	.enrollment-wrap {
+		@include desktop {
+			display: flex;
+			flex-direction: row;
+			.guids {
+				flex-shrink: 3.5;
+				padding-right: 1rem;
+			}
+		}
 	}
-}
-	.enroll-info  {
+	.enroll-info {
 		margin-top: 27rem;
+		@include desktop {
+			margin-top: 2rem;
+		}
 	}
-
 	.enroll-block {
 		max-width: 70%;
 		display: flex;
 		margin: 40px auto;
 		flex-direction: column;
 		justify-content: center;
-
 		.enroll-img {
 			margin-bottom: 50px;
 		}
@@ -218,15 +222,21 @@ p {
 	}
 }
 //teacher list Section
+
+
 .teacher-list {
 	padding: 2px;
 	flex-wrap: wrap;
 	display: flex;
 	justify-content: center;
+	h1{
+		width: 40%;
+		padding: 1.7rem;
+		border-top: solid 3px $color_btn_green;
+	}
 	@include desktop {
 		flex-direction: column;
 	}
-
 	.teacher-grid {
 		display: flex;
 		flex-wrap: wrap;
@@ -234,7 +244,6 @@ p {
 		@include desktop {
 			flex-direction: row;
 		}
-
 		.teacher-block {
 			flex: 33%;
 			display: flex;
@@ -245,13 +254,11 @@ p {
 				flex: 1;
 			}
 		}
-
 		.flip-container {
 			display: block;
 			box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
 			background: #aff1d3;
 			border-radius: 50%;
-
 			.flipper {
 				flex: 1 0 auto;
 				display: flex;
@@ -263,29 +270,24 @@ p {
 				-moz-transform-style: preserve-3d;
 				transition: 1.9s;
 				transform-style: preserve-3d;
-
 				.teacher_det {
 					display: block;
 				}
-
 				p {
 					font-size: 1rem;
 					font-style: italic;
 					line-height: $basic_hline_height*2.4;
 				}
 			}
-
 			.front {
 				position: absolute;
 				background-size: cover;
 				border-radius: 50%;
 				flex: 2;
-
 				img {
 					border-radius: 50%;
 				}
 			}
-
 			.back {
 				border-radius: 50%;
 				position: absolute;
@@ -306,6 +308,7 @@ p {
 				}
 			}
 		}
+
 		.flip-container.hover .flipper,
 		.flip-container:hover .flipper {
 			-webkit-transform: rotateY(180deg);
