--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -219,27 +219,29 @@ margin-right: 30px;
 }
 
 
+
+
+	.secondary {
+	li:first-child a::after {
+
+		border-right: solid 2px transparent;
+	}
+		li:last-child a::after {
+
+			border-right: solid 2px transparent;
+}
+
+	}
+
+
 div {
 	position: relative;
 
-	.secondary li:nth-child(3) a {
-		border-left: solid 1px white;
-		border-right: solid 1px white;
-	}
-}
+	.secondary li a::after {
+			content: "";
+			border-right: solid 2px $white;
+	}}
 
-div {
-	position: relative;
-
-	.secondary li:nth-child(4) a {
-		padding: 0 20px;
-		border-left: solid 1px white;
-		border-right: solid 1px white;
-	}
-}
-.secondary li:nth-child(2) {
-	margin-left: 70px;
-}
 
 div {
 	.secondary li a {
@@ -251,14 +253,10 @@ div {
 	}
 }
 div .secondary {
-	position: relative;
-
-
-
 	font-family: $font_header_footer;
 	@include desktop {
 		text-align: right;
-		padding:8px 10px;
+		padding:8px 5px;
 		height: 70px;
 		margin-top: 40px;
 	}
