--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -288,7 +288,7 @@ h1, h2, h3 {
   font-weight: lighter; }
 
 h1 {
-  font-size: 2rem; }
+  font-size: 2.5rem; }
 
 h2 {
   font-size: 1.6rem; }
@@ -713,21 +713,17 @@ button#responsive-menu-button {
   left: 0;
   margin-right: 30px; }
 
-div {
-  position: relative; }
-  div .secondary li:nth-child(3) a {
-    border-left: solid 1px white;
-    border-right: solid 1px white; }
+.secondary li:first-child a::after {
+  border-right: solid 2px transparent; }
+
+.secondary li:last-child a::after {
+  border-right: solid 2px transparent; }
 
 div {
   position: relative; }
-  div .secondary li:nth-child(4) a {
-    padding: 0 20px;
-    border-left: solid 1px white;
-    border-right: solid 1px white; }
-
-.secondary li:nth-child(2) {
-  margin-left: 70px; }
+  div .secondary li a::after {
+    content: "";
+    border-right: solid 2px #fff; }
 
 div .secondary li a {
   padding: 0 5px;
@@ -737,7 +733,6 @@ div .secondary li a {
       line-height: 2.3rem; } }
 
 div .secondary {
-  position: relative;
   font-family: "PT Serif", serif;
   text-align: center;
   padding-right: 5px;
@@ -745,7 +740,7 @@ div .secondary {
   @media (min-width: 959px) {
     div .secondary {
       text-align: right;
-      padding: 8px 10px;
+      padding: 8px 5px;
       height: 70px;
       margin-top: 40px; } }
   div .secondary .active {
@@ -1530,7 +1525,7 @@ body {
 .main-philosophy {
   margin: 100px auto;
   width: 400px;
-  min-width: 90%;
+  min-width: 80%;
   height: auto;
   display: flex;
   display: -ms-flexbox;
@@ -1698,8 +1693,8 @@ body {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; } }
   .materials img {
-    width: 330px;
-    height: 330px; }
+    width: 300px;
+    height: 300px; }
     @media (min-width: 959px) {
       .materials img {
         margin-top: 50px; } }
@@ -1760,15 +1755,13 @@ body {
       -ms-flex-direction: row;
           flex-direction: row; } }
   .first-benefits-section img {
-    width: 250px;
-    height: 250px;
-    margin-top: 30px; }
+    width: 300px;
+    height: 300px;
+    padding-top: 50px; }
     @media (min-width: 959px) {
       .first-benefits-section img {
         -ms-flex-item-align: start;
             align-self: flex-start;
-        width: 330px;
-        height: 330px;
         margin: 0 40px 20px 0; } }
 
 .benefits-content {
