--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -36,15 +36,15 @@
   // box-sizing: border-box;
   //
   }
-    a {
-      width: 145px;
-  height: 81px;
-  font-family: Asap;
-  font-size: 24px;
-  line-height: 27px;
-  color: #1B1B1B;
-  margin-right: 25px
-    }
+//     a {
+//       width: 145px;
+//   height: 81px;
+//   font-family: Asap;
+//   font-size: 24px;
+//   line-height: 27px;
+//   color: #1B1B1B;
+//   margin-right: 25px
+//     }
 
 
 
