--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -6,6 +6,7 @@
 	box-sizing: border-box;
 }
 .nw-program-wrapper {
+	max-width: $desktop_width;
 	height: auto;
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
@@ -70,17 +71,17 @@ p {
 		justify-content: center;
 		margin-top: $basic_margin*5.5;
 		margin-bottom: $basic_margin*3;
-		@include desktop {
-			width: 50%;
-		}
+		// @include desktop {
+		// 	width: 50%;
+		// }
 	}
 }
-.nw-part1 {
-	@include desktop {
-		display: flex;
-		flex-direction: row;
-	}
-}
+// .nw-part1 {
+// 	@include desktop {
+// 		display: flex;
+// 		flex-direction: row;
+// 	}
+// }
 
 // Funding Section
 .funding {
@@ -94,64 +95,64 @@ p {
 		display: flex;
 		justify-content: center;
 		margin-top: 2rem;
-		@include desktop {
-			margin-top: 0;
-		}
+		// @include desktop {
+		// 	margin-top: 0;
+		// }
 	}
 	.funding-img img {
-		@include desktop {
-			flex-grow: 1;
-			width: 120%;
-		}
+		// @include desktop {
+		// 	flex-grow: 1;
+		// 	width: 120%;
+		// }
 	}
-	.money-spend-img img {
-		@include desktop {
-			padding-right: 4rem;
-			padding-left: .4rem;
-		}
-	}
-	h2{
-		text-align: center;
-	}
-	.nw-part2 {
-		@include desktop {
-			display: flex;
-			flex-direction: row;
-			align-items: center;
-		  .red-border-container {
-				width: 82%;
-				display: flex;
-			}
-		}
-	}
-	@include desktop {
-		.nw-part3 {
-			display: flex;
-			align-items: center;
-			flex-direction: row-reverse;
-		}
-		.money-spend-para {
-			flex-shrink: 5;
-		}
-	}
-	.funding-btn {
-		display: flex;
-		justify-content: center;
-		margin-top: $basic_margin*3;
-		@include desktop {
-			justify-content: flex-end;
-		}
-		.green-btn {
-			padding: 10px;
-			width: 44.666%;
-			margin-right: 2px;
-			@include desktop {
-				padding: 1.2rem;
-				width: 18%;
-			}
-		}
-	}
-}
+	// .money-spend-img img {
+	// 	// @include desktop {
+	// 	// 	padding-right: 4rem;
+	// 	// 	padding-left: .4rem;
+	// 	// }
+	// }
+	// h2{
+	// 	text-align: center;
+	// }
+	// .nw-part2 {
+	// 	@include desktop {
+	// 		display: flex;
+	// 		flex-direction: row;
+	// 		align-items: center;
+	// 	  .red-border-container {
+	// 			width: 82%;
+	// 			display: flex;
+	// 		}
+	// 	}
+	// }
+	// @include desktop {
+	// 	.nw-part3 {
+	// 		display: flex;
+	// 		align-items: center;
+	// 		flex-direction: row-reverse;
+	// 	}
+	// 	.money-spend-para {
+	// 		flex-shrink: 5;
+	// 	}
+	// }
+	// .funding-btn {
+	// 	display: flex;
+	// 	justify-content: center;
+	// 	margin-top: $basic_margin*3;
+		// @include desktop {
+		// 	justify-content: flex-end;
+		// }
+		// .green-btn {
+		// 	padding: 10px;
+		// 	width: 44.666%;
+		// 	margin-right: 2px;
+			// @include desktop {
+			// 	padding: 1.2rem;
+			// 	width: 18%;
+// 			// }
+// 		}
+// 	}
+// }
 
 //School List Section
 .school-list {
@@ -177,12 +178,12 @@ p {
 	h1{
 		width:78%;
 	}
-	@include desktop{
-		h1{
-		  width: 40%;
-			padding: 1.7rem;
-			border-top: solid 3px $color_btn_green;
-		}
+	// @include desktop{
+	// 	h1{
+	// 	  width: 40%;
+	// 		padding: 1.7rem;
+	// 		border-top: solid 3px $color_btn_green;
+	// 	}
 	}
 }
 
@@ -191,21 +192,28 @@ p {
 	display: flex;
 	flex-direction: column;
 
-	.enrollment-wrap {
-		@include desktop {
-			display: flex;
-			flex-direction: row;
-			.guids {
-				flex-shrink: 3.5;
-				padding-right: 1rem;
-			}
-		}
-	}
+	// .enrollment-wrap {
+	// 	@include desktop {
+	// 		display: flex;
+	// 		flex-direction: row;
+	// 		.guids {
+	// 			flex-shrink: 3.5;
+	// 			padding-right: 1rem;
+	// 		}
+	// 	}
+	// }
 	.enroll-info {
-		margin-top: 27rem;
-		@include desktop {
-			margin-top: 2rem;
+		margin-top: 23rem;
+
+		@media screen and (min-width: 668px) {
+			margin-top: 13rem;
 		}
+
+
+
+		// @include desktop {
+		// 	margin-top: 2rem;
+		// }
 	}
 	.enroll-block {
 		max-width: 70%;
@@ -215,6 +223,8 @@ p {
 		justify-content: center;
 		.enroll-img {
 			margin-bottom: 50px;
+			display: flex;
+			justify-content: center;
 		}
 		.enroll-btn {
 			align-self: center;
@@ -234,9 +244,9 @@ p {
 		padding: 1.7rem;
 		border-top: solid 3px $color_btn_green;
 	}
-	@include desktop {
-		flex-direction: column;
-	}
+	// @include desktop {
+	// 	flex-direction: column;
+	// }
 	.teacher-grid {
 		display: flex;
 		flex-wrap: wrap;
@@ -253,10 +263,6 @@ p {
 				max-width: 990px;
 				flex: 1;
 			}
-<<<<<<< HEAD
-=======
-
->>>>>>> abff685c577f315c109663cebc5375d3573bcca3
 		}
 		.flip-container {
 			display: block;
